# loopjet-frappe-deployment

./: .env.example  .gitignore  LICENSE.md  README.md  SECURITY.md
.github/workflows/: build-image.yml  ci.yml  compatibility.yml  upstream-updates.yml
compose/: hostinger-traefik.yaml  loopjet.yaml  mcp.yaml
config/: frappe-docker.patch  versions.json
docs/: architecture.md  development.md  disaster-recovery.md  mcp.md  production.md  upgrades.md
mcp/loopjet-frappe-mcp/: Dockerfile  README.md  pyproject.toml
mcp/loopjet-frappe-mcp/src/loopjet_frappe_mcp/: auth.py  config.py  frappe.py  models.py  server.py
mcp/loopjet-frappe-mcp/tests/: test_frappe_client.py  test_models.py
scripts/: apply-frappe-docker-overlay.py  backup.sh  bootstrap-frappe-docker.sh  build-image.sh  check-upstream-updates.py  create-sites.sh  generate-apps.py  healthcheck.sh  restore.sh  stack.sh  upgrade.sh  validate-config.py
tests/: test_config.py
