[project]
name = "loopjet-frappe-mcp"
version = "0.1.0"
description = "MCP server for Loopjet ERPNext invoices and Frappe Helpdesk tickets"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28,<1",
    "mcp[cli]>=1.27,<2",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.24,<2",
    "ruff>=0.8,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loopjet_frappe_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
